--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ img{
     display: inline-block;
 }
 
+span{
+    display: inline-block;
+}
+
 .container{
     width: 1226px;
     max-width: 100%;
@@ -66,13 +70,13 @@ img{
 
 .lms__navigation_img{
     display: inline-block;
-    transform: translate(50px,-50px)
+    transform: translate(50px,-40px)
     rotate(180deg);
-    transition: 0.5s linear;
+    transition: 0.3s linear;
 }
 
 .active__lms__navigation_img{
-    transform: translate(195px,-50px)
+    transform: translate(195px,-40px)
     rotate(0deg);
 }
 
@@ -81,7 +85,7 @@ img{
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    gap: 25px;    
+    gap: 5px;    
 }
 
 .lms__link{
@@ -139,122 +143,252 @@ img{
 
 /* ================================================Header=========================================== */
 
-.lms__header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 4%;
-}
-
-
-
-.lms__header__wrraper{
-    display: flex;
-    /* background-color: yellow; */
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0px 10px 0px;
-}
-
-
-.lms__header__item1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    transition: 0.3s ease-in-out;
+.header__section{
+    transition: 0.1s  linear;
 }
 
 .active__header{
-    padding-left: 11%;
+    padding-left: 14%;
 }
 
 
-.lms__header__item1_group{
-    font-size: 20px;
-    font-weight: bold;
-}
-.lms__header__item1_subject{
-    font-size: 20px;
-    font-weight: bold;
+.header__wrraper{
+    flex: 1;
+    padding: 15px 0px 15px 0px;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;  
 }
 
-.lms__header__item2{
+.header__container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.header__container__group__wrraper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+}
+.header__container__davomat__wrraper{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
 }
 
-.lms__header__item2__color1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;  
-}
-
-.lms__header__item2__color1_green{
+.header__container__davomat__wrraper__color1{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
     background-color: green;
-    width: 15px;
-    height: 15px;
-    border-radius: 3px;
 }
-.lms__header__item2__color1_red{
+.header__container__davomat__wrraper__color2{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
     background-color: red;
-    width: 15px;
-    height: 15px;
-    border-radius: 3px;
 }
-.lms__header__item2__color1_yellow{
+.header__container__davomat__wrraper__color3{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
     background-color: yellow;
-    width: 15px;
-    height: 15px;
-    border-radius: 3px;
+}
+
+.header__container__davomat__wrraper__text{
+    font-size: 15px;
+    font-weight: 700;
 }
 
 
-/* ============================================navbar=============================== */
+/* ===============================================navbar================================== */
 
-.lms__navbar__wrraper{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: aqua;
-    padding: 10px 0px 10px 0px;
-    border-bottom: 1px solid whitesmoke;
+.navbar__section{
+    transition: 0.1s linear;
 }
 
 .active__navbar{
-    padding-left: 30%;
-    background-color: red;
+    padding-left: 14%;
 }
 
+.navbar__wrraper{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding: 10px 0px 10px 0px ;
+    border-bottom:1px solid whitesmoke ;
+}
 
-.lms__navbar__wrraper__item1{
+.navbar__wrraper__container1{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 2%;
+    gap: 150px;
+}
+.navbar__wrraper__container2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+
+.navbar__wrraper__container__students_day{
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.navbar__wrraper__container__izoh__wrraper{
+    display: flex;
+    justify-content: center;
+    align-items: end;
     gap: 20px;
+    padding: 10px 0px 10px 8px;
+    border-left: 1px solid whitesmoke;
 }
 
-.lms__navbar__wrraper__item1_btn{
-    padding: 10px;
+.navbar__wrraper__container__izoh__wrraper_btn__container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
-    border-left: 1px solid black;
+    gap: 2px;
 }
 
-.lms__navbar__wrraper__item1__button{
-    margin-left: 10px;
+.navbar__wrraper__container__izoh__wrraper_btn__container__date{
+    color: rgb(0, 81, 255);
+    cursor: pointer;
+}
+
+.navbar__wrraper__container__izoh__wrraper_btn__container__btn{
+    width: 45px;
+    height: 20px;
+    border-radius: 10px;
+    border: 2px solid whitesmoke;
+    cursor: pointer;
+}
+
+.navbar__wrraper__container__izoh__wrraper_btn__container__btn__rol{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color:rgb(167, 161, 161);
+    transition: 0.5s linear;
+}
+
+.active__rol{
+    transform: translate(25px);
+}
+
+.navbar__wrraper__container__izoh__wrraper__text{
+  font-size: 17px;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 
-.lms__navbar__wrraper__item2{
+.navbar__wrraper__container__list{
     display: flex;
+    flex-direction: column;
+    padding: 5px 15px 5px 15px;
+    border-radius: 5px;
+    background-color: whitesmoke;
     justify-content: center;
     align-items: center;
+    gap: 2px;
+    cursor: pointer;
+}
+
+.navbar__wrraper__container__list__text{
+    font-size: 14px;
+    font-weight: 400;
+}
+
+
+/* ===========================================main================================= */
+
+.main__section{
+    transition: 0.1s linear;
+}
+
+.active__main{
+    padding-left: 14%;
+}
+
+.main__wrraper{
+    padding: 10px 0px 10px 0px;
+}
+
+.main__wrraper__list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
     gap: 10px;
+}
+
+.main__wrraper__list__link{
+    width: 430px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main__wrraper__list__link_name_wrrpaer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    gap: 5px;
+    cursor: pointer;
+    padding: 0px 15px 0px 0px;
+    background-color: whitesmoke;
+}
+
+.main__wrraper__list__link_name_wrrpaer__id{
+  width: 25px;
+  text-align: center;
+  padding-top: 20px;
+  font-size: 20px;
+  height: 60px;
+  border-right: 1px solid rgb(187, 187, 187);
+}
+
+.main__wrraper__list__link_name_wrrpaer_name{
+    width: 230px;
+    font-size: 15px ;
+    font-weight: 500;
+    color: black;
+}
+
+.main__wrraper__list__link_color{
+    width: 60px;
+    height: 60px;
+    background-color: green;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.main__wrraper__list__link_comment{
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 2px dashed whitesmoke;
+}
+
+.main__wrraper__list__link_comment:hover{
+    border: 2px solid whitesmoke;
 }
